on rejection of any inventory request the details of rejection will be sent to the requested ones

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -220,9 +220,8 @@
     <hr>
     <div style="text-align: center;">
         <h2>Log Data</h2>
-
         <a href="/LogData">
-        <button class="view_log_data_button">View Log Data</button>
+        <button class="view_log_data_button">Logs</button>
         </a>
     </div>
     <hr>
