--- a/templates/supplier_dashboard.html
+++ b/templates/supplier_dashboard.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Supplier dashBoard - {{manager_id}}</h1>
+    <hr>
     <div>
         <h2 class="industry_dashboard_sub_heading" >Request Data</h2>
         <table border="1.5" cellpadding="15" cellspacing="0" style="margin: 25px;">
@@ -16,6 +17,7 @@
                     <th>Supplier ID</th>
                     <th>Quantity</th>
                     <th>Hospital ID</th>
+                    <th>Industry ID</th>
                     <th>Medicine Name</th>
                     <th>Request Timestamp</th>
                     <th>Action</th>
@@ -26,6 +28,7 @@
                 <tr style="padding: 10px; text-align: center; font-size: 22px; font-weight: 400;">    
                     <td>{{ record[0] }}</td>
                     <td>{{ record[1] }}</td>
+                    <td>{{ record[5] }}</td>
                     <td>{{ record[2] }}</td>
                     <td>{{ record[3] }}</td>
                     <td>{{ record[4] }}</td>
@@ -35,6 +38,7 @@
                             <input type="hidden" name="quantity" value="{{record[1]}}">
                             <input type="hidden" name="hsp_id" value="{{record[5]}}">
                             <input type="hidden" name="med_name" value="{{record[3]}}">
+                            <input type="hidden" name="ind_id" value="{{record[2]}}">
                             <button type="submit" name="action" value="approve" class="supplier_dashboard_approve_button" >Approve</button>
                             <button type="submit" name="action" value="reject" class="supplier_dashboard_reject_button">Reject</button>
                         </form>
@@ -44,6 +48,7 @@
             </tbody>
         </table>
     </div>
+    <hr>
     <div>
         <h2 class="industry_dashboard_sub_heading">Medicinal Data</h2>
         <table border="1.5" cellpadding="15" cellspacing="0" style="margin:25px;">
@@ -73,13 +78,13 @@
                             <input  style="border-radius: 8px; width: 10vw; height: 32px;"  type="number" min="100" max="5000" name="quantity">
                             <button  class="supplier_dashboard_request_button"  type="submit">Request</button>
                         </form>
-                    </td>>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-
+    <hr>
     <div>
         <h2 class="industry_dashboard_sub_heading">Inventory Data</h2>
         <table border="1.5" cellpadding="15" cellspacing="0" style="margin: 25px;">
@@ -93,6 +98,30 @@
             </thead>
             <tbody>
                 {% for record in inventory_data %}
+                <tr style="padding: 10px; text-align: center; font-size: 22px; font-weight: 400;">    
+                    <td>{{ record[2] }}</td>
+                    <td>{{ record[1] }}</td>
+                    <td>{{ record[3] }}</td>
+                    <td>{{ record[4] }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <hr>
+    <div>
+        <h2 class="industry_dashboard_sub_heading">Rejected Inventory Data</h2>
+        <table border="1.5" cellpadding="15" cellspacing="0" style="margin: 25px;">
+            <thead>
+                <tr class="industry_dashboard_add_medicine_table">
+                    <th>Industry ID</th>
+                    <th>Quantity</th>
+                    <th>Medicine Name</th>
+                    <th>rejected Time-Stamp</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for record in rejected_inventory_data %}
                 <tr style="padding: 10px; text-align: center; font-size: 22px; font-weight: 400;">    
                     <td>{{ record[2] }}</td>
                     <td>{{ record[1] }}</td>
