--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -102,7 +102,8 @@
                             <input type="hidden" name="ind_id" value="{{record[3]}}">
                             <input type="hidden" name="med_name" value="{{record[1]}}">
                             <input type="hidden" name="hsp_id" value="{{hsp_id}}">
-                            <input type="number" min="100" max="5000" name="quant">
+                            <input type="number" min="100" max="{{record[2]}}" name="quant">
+                            <input type="hidden" name="existing_quantity" value="{{ record[2] }}">
                             <button class="supplier_dashboard_request_button" type="submit">Request</button>
                         </form>
                     </td>
